# JIMP2_lab

lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab11/: CMakeLists.txt
lab12/tree/: Tree.cpp  Tree.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab2/xorcypherbreaker/: XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/smarttree/: SmartTree.h  main.cpp
lab3/tinyurl/: TinyUrl.h  main.cpp
lab4/netsjson/: CMakeLists.txt  SimpleJson.cpp  SimpleJson.h  main.cpp
lab4/netstemplateengine/: SimpleTemplateEngine.h  main.cpp
lab5/: CMakeLists.txt
lab5/Matrix/: CMakeLists.txt  matrix.h
lab5/matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
lab5/textpool/: TextPool.cpp  TextPool.h
lab6/wordcounter/: WordCounter.cpp  WordCounter.h  main.cpp
lab7/: CMakeLists.txt
lab7/point/: Point.cpp  Point.h  main.cpp
lab8/: CMakeLists.txt
lab8/microdvd/: MovieSubtitles.cpp  MovieSubtitles.h  main.cpp
lab9/academiaserializer/: Building.cpp  Building.h  CMakeLists.txt  JsonSerializer.cpp  JsonSerializer.h  Room.cpp  Room.h  Serialization.cpp  Serialization.h  Serializer.cpp  Serializer.h  main.cpp
tests/lab12test/: TreeTest.cpp
tests/lab1test/: CMakeLists.txt
tests/lab6test/: WordCounterTest.cpp
